# rs-subito-alert

./: CHANGELOG.md  Cargo.toml  Makefile  README.md  REDME.md
.devcontainer/: devcontainer.json
.github/workflows/: push.yml  release.yml
resources/: example_page.html
src/: lib.rs  main.rs  main.rs_  main.rs__  types.rs
src/application/: application_api.rs  mod.rs  settings.rs  subito.rs
src/notification/: mod.rs  notification_api.rs  telegram_notifier.rs
src/query_db/: db.rs  mod.rs  query.rs  query_api.rs  query_engine.rs  search.rs
src/query_db/serializer/: mod.rs  serializer_agent.rs  serializer_api.rs
src/scraper/: download_api.rs  item_result.rs  mod.rs  scraper.rs  scraper_agent.rs  scraper_api.rs
src/scraper/downloader/: download_agent.rs  download_api.rs  mod.rs
src/serializer/: mod.rs  serializer_agent.rs  serializer_api.rs
src/subito/: application.rs  mod.rs  subito.rs  testing.rs
src/telegram_bot/: commands.rs  env.rs  handlers.rs  mod.rs  state.rs  telegram_bot_agent.rs  telegram_bot_api.rs
src/testing/: mod.rs  notifier.rs  query.rs  scraper.rs
src/user_interface/: cli.rs  mod.rs  options.rs  user_interface_api.rs
tests/: application.rs  notification.rs  query_db.rs  scraper.rs  serializer.rs  telegram_bot.rs
tests/common/: mod.rs  query.rs  scraper.rs
tests/test_doubles/: application.rs  mod.rs  notifier.rs  query.rs  scraper.rs  serializer.rs
