[package]
name = "rs-subito-alert"
version = "0.1.0"
edition = "2021"

[dependencies]
dirs = "5.0.1"
html5ever = "0.26.0"
isahc = "1.7.2"
log = "0.4"
pretty_env_logger = "0.4"
regex = "1.9.1"
serde = { version = "1.0.181", features = ["derive", "rc"] }
serde_json = "1.0.104"
soup = "0.5.1"
teloxide = { version = "0.12", features = ["macros"] }
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
