[package]
name = "rs-subito-alert"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.73"
dirs = "5.0.1"
log = "0.4"
pretty_env_logger = "0.4"
regex = "1.9.1"
reqwest = "0.11.19"
serde = { version = "1.0.181", features = ["derive", "rc"] }
serde_json = "1.0.104"
serial_test = "2.0.0"
soup = "0.5.1"
teloxide = { version = "0.12", features = ["macros"] }
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
